syntax = "proto3";
package api;

import "google/protobuf/empty.proto";

option go_package = "./rpc/api";

// creating rpc services for api system.
service API {
  rpc PrintBalance(PrintBalanceMsg) returns (PrintBalanceRsp) {}
  rpc PrintDatastore(google.protobuf.Empty) returns (stream DatastoreRsp) {}
}

message PrintBalanceMsg {
  string client = 1;
}

message PrintBalanceRsp {
  int64 balance = 1;
}

message DatastoreRsp {
  string sender = 1;
  string receiver = 2;
  int64 amount = 3;
  int64 session_id = 4;
  int64 sequence = 5;
}
